Css fixes
Fixed horizontal scrolling bug caused by overflowing composer screenshot

Fixed Safari watercolor bug caused by overflowing watercolor containers

Fixed double vertical scrollbar bug caused by overflowing hero

--- a/_sass/_animated-hero.scss
+++ b/_sass/_animated-hero.scss
@@ -24,7 +24,7 @@ $blue: #419bf9;
   width: 100%;
   height: 1200px; // Reset by js on boot
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
   // @include transition(height 1s ease-in-out);
   img {
     -webkit-user-select: none;
